name:                eta-servant
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable eta-servant
  main-is:             Main.hs
  other-modules:       Servlet.Jetty
  build-depends:       base >=4.8 && <4.9
                     , wai-servlet
                     , servant-server
                     , wai
                     , http-types
                     , aeson
                     , transformers
                     , time
  maven-depends:       javax.servlet:servlet-api:2.5
                     , org.eclipse.jetty:jetty-servlet:9.4.3.v20170317
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DataKinds
                       TypeFamilies
                       DeriveGeneric
                       TypeOperators
                       FlexibleContexts
                       MagicHash
                       LambdaCase
                       OverloadedStrings
