name:                eta-servant
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable eta-servant
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , wai-servlet
                     , wai-servlet-handler-jetty
                     , servant-server <= 0.9.1.1
                     , wai
                     , http-types
                     , aeson
                     , transformers
                     , time
                     , bytestring
                     , servant-docs
                     , text
                     , either
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DataKinds
                       TypeFamilies
                       DeriveGeneric
                       TypeOperators
                       FlexibleContexts
                       MagicHash
                       LambdaCase
                       OverloadedStrings
                       FlexibleInstances
