name:                eta-servant
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable eta-servant
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , wai-servlet-handler-jetty
                     , servant
                     , servant-server
                     , wai
                     , http-types
                     , aeson
                     , transformers
                     , time
                     , bytestring
                     , servant-docs
                     , text
                     , either
  if impl(eta >= 0.0.9.7)
     build-depends:    wai-servlet >= 0.1.2.0
  else
     build-depends:    wai-servlet >= 0.1.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DataKinds
                       TypeFamilies
                       DeriveGeneric
                       TypeOperators
                       FlexibleContexts
                       MagicHash
                       LambdaCase
                       OverloadedStrings
                       FlexibleInstances
